tests/snapshots/query_result_basic__list_page_empty.snap
---
source: tests/query_result_basic.rs
expression: page
---
MemoryListPage {
    records: [],
    next_cursor: None,
}
