tests/snapshots/query_result_basic__list_page_with_records.snap
---
source: tests/query_result_basic.rs
expression: page
---
MemoryListPage {
    records: [
        MemoryRecord {
            namespace: "ns1",
            key: "key1",
            payload: "data1",
            metadata: {},
            created_at_ms: 100,
            updated_at_ms: 200,
            version: 1,
            node_id: 1,
            vector: None,
            sparse_vector: None,
            expires_at_ms: None,
            superseded_by: None,
            superseded_at_ms: None,
            valid_at_ms: 0,
            invalid_at_ms: None,
            confidence_class: Asserted,
            confidence: 1.0,
            last_validated_at_ms: None,
            derived_from: [],
            quarantined_at_ms: None,
            quarantine_reason: None,
            quarantined_by: None,
            quarantine_review_due_ms: None,
        },
        MemoryRecord {
            namespace: "ns1",
            key: "key2",
            payload: "data2",
            metadata: {},
            created_at_ms: 300,
            updated_at_ms: 400,
            version: 1,
            node_id: 2,
            vector: None,
            sparse_vector: None,
            expires_at_ms: None,
            superseded_by: None,
            superseded_at_ms: None,
            valid_at_ms: 0,
            invalid_at_ms: None,
            confidence_class: Asserted,
            confidence: 1.0,
            last_validated_at_ms: None,
            derived_from: [],
            quarantined_at_ms: None,
            quarantine_reason: None,
            quarantined_by: None,
            quarantine_review_due_ms: None,
        },
    ],
    next_cursor: Some(
        2,
    ),
}
