tests/snapshots/query_result_basic__search_request_basic.snap
---
source: tests/query_result_basic.rs
expression: req
---
MemorySearchRequest {
    namespace: "agent/main",
    query_vector: [
        0.1,
        0.2,
        0.3,
    ],
    query_sparse: None,
    filters: {},
    text_query: Some(
        "hello world",
    ),
    top_k: 10,
    distance_metric: Cosine,
    explain: false,
    exclude_superseded: false,
    min_confidence: None,
    as_of_ms: None,
    valid_window: None,
    include_quarantined: false,
    search_profile: None,
    range: None,
    group_by: None,
    mmr: None,
    cursor: None,
}
