tests/snapshots/query_result_basic__search_request_text_only.snap
---
source: tests/query_result_basic.rs
expression: req
---
MemorySearchRequest {
    namespace: "knowledge",
    query_vector: [],
    query_sparse: None,
    filters: {
        "category": String(
            "tech",
        ),
    },
    text_query: Some(
        "rust async",
    ),
    top_k: 20,
    distance_metric: Cosine,
    explain: true,
    exclude_superseded: false,
    min_confidence: None,
    as_of_ms: None,
    valid_window: None,
    include_quarantined: false,
    search_profile: None,
    range: None,
    group_by: None,
    mmr: None,
    cursor: None,
}
