tests/snapshots/query_result_basic__search_request_vector_only.snap
---
source: tests/query_result_basic.rs
expression: req
---
MemorySearchRequest {
    namespace: "docs",
    query_vector: [
        0.5,
        0.5,
        0.5,
        0.5,
    ],
    query_sparse: None,
    filters: {},
    text_query: None,
    top_k: 5,
    distance_metric: Euclidean,
    explain: false,
    exclude_superseded: false,
    min_confidence: None,
    as_of_ms: None,
    valid_window: None,
    include_quarantined: false,
    search_profile: None,
    range: None,
    group_by: None,
    mmr: None,
    cursor: None,
}
